--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>@HarshilY</title>
+	<title>@harshilY</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=1024">
 
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
@@ -82,8 +82,8 @@
 
 			<div class="col-md-7 aboutText">
 				<h4>My name is Harshil Yadav</h4>
-				<p>Detailed-oriented, responsible and committed engineer, with a get-it-done, on-time and high-quality product spirit. More than 1.5 YEARS of experience defining requirements, designing, implementing, testing and delivering complex back-end solutions and android framework applications using variety of programming languages and technologies.</p>
-				<p>I have pursued my under-graduation from NSIT, Delhi in COMPUTER ENGINEERING. Currently working as a SOFTWARE DEVELOPMENT ENGINEER at one of the reputed tech firms, SAMSUNG RESEARCH. I'm still enthusiastically grabbing onto any other programming languages, frameworks, or principles I can integrate into the coding web in my head. There's certainly yet more to learn, yet more problems to solve, and yet more to build. And for this, I am very grateful.</p>
+				<p>Detailed-oriented, responsible and committed engineer, with a get-it-done, on-time and high-quality product spirit. More than <i>1.5 YEARS</i> of experience defining requirements, designing, implementing, testing and delivering complex back-end solutions and android framework applications using variety of programming languages and technologies.</p>
+				<p>I have pursued my under-graduation from <i>NSIT, Delhi</i> in <i>COMPUTER ENGINEERING</i>. Currently working as a <i>SOFTWARE DEVELOPMENT ENGINEER</i> at one of the reputed tech firms, <i>SAMSUNG RESEARCH</i>. I'm still enthusiastically grabbing onto any other programming languages, frameworks, or principles I can integrate into the coding web in my head. There's certainly yet more to learn, yet more problems to solve, and yet more to build. And for this, I am very grateful.</p>
 				
 			</div>
 			
@@ -154,13 +154,13 @@
 
 		<div class="col-md-12 text-center fontsAwesome">
 
-			<a href="https://www.facebook.com/harshil.yadav.5"> <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>
+			<a href="https://www.facebook.com/harshil.yadav.5" > <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>
 
-			<a href="https://github.com/haershily"> <i class="fa fa-github" aria-hidden="true"></i> </a>
+			<a href="https://github.com/haershily" > <i class="fa fa-github" aria-hidden="true"></i> </a>
 
-			<a href="https://www.linkedin.com/in/harshilyadav/"> <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
+			<a href="https://www.linkedin.com/in/harshilyadav/" > <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
 
-			<a href="https://www.instagram.com/__harshily__/"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
+			<a href="https://www.instagram.com/__harshily__/" > <i class="fa fa-instagram" aria-hidden="true"></i> </a>
 
 		</div>
 
