--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -86,13 +87,13 @@
 
 		<div class="row">
 
-			<div class="col-md-5">
-				<div><img class="aboutImage" src="img/about.jpg"></div>
+			<div class="col-md-5 shadow-sm">
+				<div><img class="aboutImage  js-wp-2" src="img/about.jpg"></div>
 				
 				
 			</div>
 
-			<div class="col-md-7 aboutText">
+			<div class="col-md-7 aboutText  js-wp-1">
 				<h4>My name is Harshil Yadav</h4>
 				<p>Detailed-oriented, responsible and committed engineer, with a get-it-done, on-time and high-quality product spirit. More than <i>1.5 YEARS</i> of experience defining requirements, designing, implementing, testing and delivering complex back-end solutions and android framework applications using variety of programming languages and technologies.</p>
 				<p>I have pursued my under-graduation from <i>NSIT, Delhi</i> in <i>COMPUTER ENGINEERING</i>. Currently working as a <i>SOFTWARE DEVELOPMENT ENGINEER</i> at one of the reputed tech firms, <i>SAMSUNG RESEARCH</i>. I'm still enthusiastically grabbing onto any other programming languages, frameworks, or principles I can integrate into the coding web in my head. There's certainly yet more to learn, yet more problems to solve, and yet more to build. And for this, I am very grateful.</p>
@@ -105,6 +106,54 @@
 	</div>
 	
 </div>
+
+<section class="why-us" id="timeline">
+             <div class="section-timeline">
+                 <div class="container">
+                     <h2 class="heading">Our <span class="bold-green">timeline</span></h2>
+                     <p class="lead under-heading">Get grasp of our milestones</p>
+                     <ul class="timeline">
+                         <li>
+                             <div class="timeline-badge">2016</div>
+                             <div class="timeline-panel">
+                                 <div class="timeline-heading">
+                                     <h4 class="timeline-title">100,000 trees <span class="green-underline">planted</span></h4>
+                                     <p><small class="text-muted"><i class="fa fa-clock-o"></i>11 hours ago via Twitter</small></p>
+                                 </div>
+                                 <div class="timeline-body">
+                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ad, numquam, magnam nihil, necessitatibus minima fuga ab veniam harum animi doloribus sapiente recusandae illo eveniet in voluptatibus voluptate voluptatum deseruntLorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ad, numquam, magnam nihil, necessitatibus minima fuga ab veniam harum animi doloribus sapiente recusandae illo eveniet in voluptatibus voluptate voluptatum deserunt?</p>
+                                 </div>
+                             </div>
+                         </li>
+                          <li class="timeline-inverted">
+                             <div class="timeline-badge">2015</div>
+                             <div class="timeline-panel">
+                                 <div class="timeline-heading">
+                                     <h4 class="timeline-title">First <span class="green-underline">55,031</span> plants bought</h4>
+                                     <p><small class="text-muted"><i class="fa fa-clock-o"></i>16 hours ago via Twitter</small></p>
+                                 </div>
+                                 <div class="timeline-body">
+                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ad, numquam, magnam nihil, necessitatibus minima fuga ab veniam harum animi doloribus sapiente recusandae illo eveniet in voluptatibus voluptate voluptatum deseruntLorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ad, numquam, magnam nihil, necessitatibus minima fuga ab veniam harum animi doloribus sapiente recusandae illo eveniet in voluptatibus voluptate voluptatum deserunt?</p>
+                                 </div>
+                             </div>
+                         </li>
+                          <li>
+                             <div class="timeline-badge">2014</div>
+                             <div class="timeline-panel">
+                                 <div class="timeline-heading">
+                                     <h4 class="timeline-title">Company <span class="green-underline">founded</span></h4>
+                                     <p><small class="text-muted"><i class="fa fa-clock-o"></i>20 hours ago via Twitter</small></p>
+                                 </div>
+                                 <div class="timeline-body">
+                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ad, numquam, magnam nihil, necessitatibus minima fuga ab veniam harum animi doloribus sapiente recusandae illo eveniet in voluptatibus voluptate voluptatum deseruntLorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ad, numquam, magnam nihil, necessitatibus minima fuga ab veniam harum animi doloribus sapiente recusandae illo eveniet in voluptatibus voluptate voluptatum deserunt?</p>
+                                 </div>
+                             </div>
+                         </li>
+                     </ul>
+                 </div>
+             </div>
+
+</section>
 
 <!-- Technical Skills -->
 <div id="skills" class="skillsSection section">
@@ -232,7 +281,7 @@
 	<div class="col-md-12 text-center">
 
 		<h class="subHeading">Like what you see?</h>
-		<h2>I'd love to hear from you!</h2>
+		<h2>I'd ♥ to hear from you!</h2>
 		<a href="https://drive.google.com/file/d/1X2dSqeBKnw0uIlTJngW6ZLteb9giRuH2/view?usp=sharing" class="contactButton">View Resume</a>
 
 		<div class="col-md-12 text-center fontsAwesome">
@@ -271,6 +320,7 @@
 <script type="text/javascript" src="js/jquery.easypiechart.min.js"></script>
 <script type="text/javascript" src="js/typed.min.js"></script>
 <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+<script type="text/javascript" src="js/jquery.waypoints.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/script.js"></script>
