--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ SSSssshhhhh!! The code starts below -->
     <img src="img/slide1.jpg" alt="">
     <img src="img/slide2.jpg" alt="">
     <img src="img/slide3.jpg" alt="">
+    <img src="img/slide4.jpg" alt="">
+    <img src="img/slide5.jpg" alt="">
   </div>
 
   <div class="titleMessage">
@@ -391,15 +393,16 @@ SSSssshhhhh!! The code starts below -->
 
 		<h class="contactText" >Like what you see?</h>
 		<h2 class="contactText" style="font-family: 'Nunito-Regular';">I'd <i class="fa fa-heart"></i> to hear from you!</h2>
-		<a href="https://drive.google.com/file/d/1X2dSqeBKnw0uIlTJngW6ZLteb9giRuH2/view?usp=sharing" class="contactButton">View Resume</a>
+		<a href="https://drive.google.com/file/d/1Hcu91kWDhO99kzfKM0evIcYaZ6BNaJYT/view?usp=sharing" class="contactButton">View Resume</a>
 
 		<div class="col-md-12 text-center fontsAwesome">
 
-			<a href="https://www.facebook.com/harshil.yadav.5" > <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>
+			<a href="https://www.facebook.com/harshil.yadav.5/" > <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>
 
-			<a href="https://github.com/haershily" > <i class="fa fa-github" aria-hidden="true"></i> </a>
+			<a href="https://github.com/yharshil" > <i class="fa fa-github" aria-hidden="true"></i> </a>
 
-			<a href="mailTo:harshilyadav@rocketmail.com" > <i class="fa fa-envelope" aria-hidden="true"></i> </a>			
+			<a href="mailTo:harshilyadav14@gmail.com" > <i class="fa fa-envelope" aria-hidden="true"></i> </a>	
+
 			<a href="https://www.linkedin.com/in/harshilyadav/" > <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
 
 			<a href="https://www.instagram.com/__harshily__/" > <i class="fa fa-instagram" aria-hidden="true"></i> </a>
