--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@ SSSssshhhhh!! The code starts below -->
     <img src="img/slide2.jpg" alt="">
     <img src="img/slide3.jpg" alt="">
     <img src="img/slide4.jpg" alt="">
-    <img src="img/slide5.jpg" alt="">
   </div>
 
   <div class="titleMessage">
@@ -170,15 +169,15 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2018</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:#487eb0">Samsung Research Institute, Noida</h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, Noida</h4>
                      <p><i>Software Development Engineer</i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
                      	Currently working in Knox Framework Technical Group under Biz Solutions R&D team for the past 2 years.
                      	<br><br> My key responsibilities include designing and developing new features for Samsung Workspace Enterprise application based upon clients requirements, while enhancing and optimizing the existing architecture of the application. 
-                     	<br><br> <i class="fa fa-chevron-right" style="color:#487eb0" aria-hidden="true"></i> Improved the Secure Folder and Workspace keyguard performance by 30%.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:#487eb0" aria-hidden="true"></i> Successfully ported Knox Keuguard application and framework codebase from Android P to Android Q.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Improved the Secure Folder and Workspace keyguard performance by 30%.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Successfully ported Knox Keuguard application and framework codebase from Android P to Android Q.
                     </p>   
                  </div>
              </div>
@@ -187,14 +186,14 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2018</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:#487eb0">Aricent Technologies, Gurgaon</h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Aricent Technologies, Gurgaon</h4>
                      <p><i>Software Trainee</i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
                      	Worked in Analytics and Research team during my 1 month winter internship. The key objectives were social media analysis using System Dynamics.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:#487eb0" aria-hidden="true"></i> Created a hybrid Machine Learning-System Dynamics model using R and Vensim to analyse and predict the Index score from the Global Connectivity Index dataset.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:#487eb0" aria-hidden="true"></i> Performed Twitter Sentimental Analysis and visualization using R and NodeXL features on the latest trends of IOT domains.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created a hybrid Machine Learning-System Dynamics model using R and Vensim to analyse and predict the Index score from the Global Connectivity Index dataset.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Performed Twitter Sentimental Analysis and visualization using R and NodeXL features on the latest trends of IOT domains.
                     </p>
                  </div>
              </div>
@@ -203,14 +202,14 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2017</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:#487eb0">Samsung Research Institute, Bangalore</h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, Bangalore</h4>
                      <p><i>Software Engineering Intern</i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
                      	Worked in Samsung Pay team on “Wallet Hub” project during my 2 months summer internship.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:#487eb0" aria-hidden="true"></i> Created one to one messaging app which lets users request money through special code using Samsung Pay and integrated it with main Samsung Pay app. 
-                     	<br><br><i class="fa fa-chevron-right" style="color:#487eb0" aria-hidden="true"></i> Implemented dummy card payment functionality in Samsung Pay SDK for Spay Mini supported devices.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created one to one messaging app which lets users request money through special code using Samsung Pay and integrated it with main Samsung Pay app. 
+                     	<br><br><i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Implemented dummy card payment functionality in Samsung Pay SDK for Spay Mini supported devices.
                     </p> 
                  </div>
              </div>
