--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ SSSssshhhhh!! The code starts below -->
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Currently working in Knox Framework Technical Group under Biz Solutions R&D team for the past 2 years.
-                     	<br><br> My key responsibilities include designing and developing new features for Samsung Workspace Enterprise application based upon clients requirements, while enhancing and optimizing the existing architecture of the application. 
+                     	Currently working in Knox Framework Technical Group under the Biz Solutions R&D team for the past 2 years.
+                     	<br><br> My key responsibilities include designing and developing new features for the Samsung Workspace Enterprise application based upon clients' requirements while enhancing and optimizing the existing architecture of the application. 
                      	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Improved the Secure Folder and Workspace keyguard performance by 30%.
                      	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Successfully ported Knox Keuguard application and framework codebase from Android P to Android Q.
                     </p>   
@@ -191,9 +191,9 @@ SSSssshhhhh!! The code starts below -->
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Worked in Analytics and Research team during my 1 month winter internship. The key objectives were social media analysis using System Dynamics.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created a hybrid Machine Learning-System Dynamics model using R and Vensim to analyse and predict the Index score from the Global Connectivity Index dataset.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Performed Twitter Sentimental Analysis and visualization using R and NodeXL features on the latest trends of IOT domains.
+                     	Worked in Analytics and Research team during my 1-month winter internship. The key objectives were social media analysis using System Dynamics.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created a hybrid Machine Learning-System Dynamics model using R and Vensim to analyze and predict the Index score from the Global Connectivity Index dataset.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Performed Twitter Sentimental Analysis and visualization using R and NodeXL features on the latest trends of IoT domains.
                     </p>
                  </div>
              </div>
@@ -207,8 +207,8 @@ SSSssshhhhh!! The code starts below -->
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Worked in Samsung Pay team on “Wallet Hub” project during my 2 months summer internship.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created one to one messaging app which lets users request money through special code using Samsung Pay and integrated it with main Samsung Pay app. 
+                     	Worked in the Samsung Pay team on the “Wallet Hub” project during my 2 months summer internship.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created one to one messaging app which lets users request money through special code using Samsung Pay and integrated it with the main Samsung Pay app. 
                      	<br><br><i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Implemented dummy card payment functionality in Samsung Pay SDK for Spay Mini supported devices.
                     </p> 
                  </div>
