--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ SSSssshhhhh!! The code starts below -->
 
 			<div class="col-md-7 aboutText">
 				<h4 style="color: #fff ">Hey! I am Harshil</h4>
-				<p>Detailed-oriented, responsible and committed engineer, with a get-it-done, on-time and high-quality product spirit. More than <i>2 YEARS</i> of experience defining requirements, designing, implementing, testing and delivering complex back-end solutions and android framework applications using variety of programming languages and technologies.</p>
+				<p>Detailed-oriented, responsible, and committed engineer, with a get-it-done, on-time, and high-quality product spirit. More than <i>2 YEARS</i> of experience defining requirements, designing, implementing, testing, and delivering complex back-end solutions and android framework applications using a variety of programming languages and technologies.</p>
 				<p>I have pursued my under-graduation from <i>NSIT, Delhi</i> in <i>COMPUTER ENGINEERING</i>. Currently working as a <i>SOFTWARE DEVELOPMENT ENGINEER</i> at one of the reputed tech firms, <i>SAMSUNG RESEARCH</i>. I'm still enthusiastically grabbing onto any other programming languages, frameworks, or principles I can integrate into the coding web in my head. There's certainly yet more to learn, yet more problems to solve, and yet more to build. And for this, I am very grateful.</p>
 				
 			</div>
