--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ SSSssshhhhh!! The code starts below -->
 
 		<h class="contactText" >Like what you see?</h>
 		<h2 class="contactText" style="font-family: 'Nunito-Regular';">I'd <i class="fa fa-heart"></i> to hear from you!</h2>
-		<a href="https://drive.google.com/file/d/1BnFimmsPMpdg3-8zHdmLgYkxYAXr4No9/view?usp=sharing" class="contactButton">View Resume</a>
+		<a href="resume/resume.pdf" class="contactButton">View Resume</a>
 
 		<div class="col-md-12 text-center fontsAwesome">
 
