--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ SSSssshhhhh!! The code starts below -->
         <a class="nav-link" href="#contact">Contact</a>
       </li>
       <li class="nav-item" id="home">
-        <a class="nav-link" href="http://www.google.com">Resume&nbsp;<i class="fa fa-cloud-download" aria-hidden="true"></i></a>
+        <a class="nav-link" href="http://www.google.com" target="_blank">Resume&nbsp;<i class="fa fa-cloud-download" aria-hidden="true"></i></a>
       </li>
 
     </ul>
@@ -398,19 +398,19 @@ SSSssshhhhh!! The code starts below -->
 
 		<h class="contactText" >Like what you see?</h>
 		<h2 class="contactText" style="font-family: 'Nunito-Regular';">I'd <i class="fa fa-heart"></i> to hear from you!</h2>
-		<a href="resume/resume.pdf" class="contactButton">View Resume</a>
+		<a href="resume/resume.pdf" class="contactButton" target="_blank">View Resume</a>
 
 		<div class="col-md-12 text-center fontsAwesome">
 
-			<a href="https://www.facebook.com/harshil.yadav.5/" > <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>
+			<a href="https://www.facebook.com/harshil.yadav.5/" target="_blank" > <i class="fa fa-facebook-official" aria-hidden="true"></i> </a>
 
-			<a href="https://github.com/yharshil" > <i class="fa fa-github" aria-hidden="true"></i> </a>
+			<a href="https://github.com/yharshil" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i> </a>
 
-			<a href="mailTo:harshilyadav14@gmail.com" > <i class="fa fa-envelope" aria-hidden="true"></i> </a>	
+			<a href="mailTo:harshilyadav14@gmail.com" target="_blank"> <i class="fa fa-envelope" aria-hidden="true"></i> </a>	
 
-			<a href="https://www.linkedin.com/in/harshilyadav/" > <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
+			<a href="https://www.linkedin.com/in/harshilyadav/" target="_blank"> <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
 
-			<a href="https://www.instagram.com/__harshily__/" > <i class="fa fa-instagram" aria-hidden="true"></i> </a>
+			<a href="https://www.instagram.com/__harshily__/" target="_blank"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
 
 		</div>
 
@@ -443,7 +443,7 @@ SSSssshhhhh!! The code starts below -->
 <script type="text/javascript" src="js/script.js"></script>
 
 <!-- Resume Link -->
-<script> document.getElementById("home").onclick = function () { location.href = "https://drive.google.com/file/d/1X2dSqeBKnw0uIlTJngW6ZLteb9giRuH2/view?usp=sharing"; }; </script>
+<script> document.getElementById("home").onclick = function () { location.href = "resume/resume.pdf"; }; </script>
 
 </body>
 </html>
