--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ SSSssshhhhh!! The code starts below -->
 
 		<h class="contactText" >Like what you see?</h>
 		<h2 class="contactText" style="font-family: 'Nunito-Regular';">I'd <i class="fa fa-heart"></i> to hear from you!</h2>
-		<a href="resume/resume.pdf" class="contactButton" target="_blank">View Resume</a>
+		<a href="resume/HarshilYadav_SDE.pdf" class="contactButton" target="_blank">View Resume</a>
 
 		<div class="col-md-12 text-center fontsAwesome">
 
@@ -443,7 +443,7 @@ SSSssshhhhh!! The code starts below -->
 <script type="text/javascript" src="js/script.js"></script>
 
 <!-- Resume Link -->
-<script> document.getElementById("home").onclick = function () { location.href = "resume/resume.pdf"; }; </script>
+<script> document.getElementById("home").onclick = function () { location.href = "resume/HarshilYadav_SDE.pdf"; }; </script>
 
 </body>
 </html>
