added twitter link

--- a/index.html
+++ b/index.html
@@ -410,6 +410,8 @@ SSSssshhhhh!! The code starts below -->
 
 			<a href="https://www.linkedin.com/in/harshilyadav/" target="_blank"> <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
 
+			<a href="https://twitter.com/iHarshilY" target="_blank"> <i class="fa fa-twitter" aria-hidden="true"></i> </a>
+
 			<a href="https://www.instagram.com/__harshily__/" target="_blank"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
 
 		</div>
