--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ SSSssshhhhh!! The code starts below -->
 
   <div class="titleMessage">
   	<div class="heading">
-  		<p class="main">HARSHIL YADAV</p>
-  		<p class="sub typed"></p>
+  		<p class="main" >HARSHIL YADAV</p>
+  		<p class="sub typed" style="color: #66FCF1 "></p>
   	</div>
   	
   </div>
@@ -98,7 +98,7 @@ SSSssshhhhh!! The code starts below -->
 <nav id="navigation" class="navbar navbar-expand-lg">
  
   <li class="disabled">
-  	<a class="navbar-brand">Harshil Yadav</a>
+  	<a class="navbar-brand" style="color: #66FCF1 ">Harshil Yadav</a>
   </li>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -108,22 +108,22 @@ SSSssshhhhh!! The code starts below -->
     <ul class="navbar-nav ml-auto">
 
       <li class="nav-item active">
-        <a class="nav-link" href="#about">About Me <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#about" style="color: #66FCF1 ">About Me <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#timeline">Experience <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#timeline" style="color: #66FCF1 ">Experience <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link" href="#skills" style="color: #66FCF1 ">Skills</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#stats">Stats</a>
+        <a class="nav-link" href="#stats" style="color: #66FCF1 ">Stats</a>
       </li>      
       <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link" href="#contact" style="color: #66FCF1 ">Contact</a>
       </li>
       <li class="nav-item" id="home">
-        <a class="nav-link" href="http://www.google.com" target="_blank">Resume&nbsp;<i class="fa fa-cloud-download" aria-hidden="true"></i></a>
+        <a class="nav-link" href="http://www.google.com" target="_blank" style="color: #66FCF1 ">Resume&nbsp;<i class="fa fa-cloud-download" aria-hidden="true"></i></a>
       </li>
 
     </ul>
@@ -145,11 +145,11 @@ SSSssshhhhh!! The code starts below -->
 			</div>
 
 			<div class="col-md-7 aboutText">
-				<h4 style="color: #fff "><i>‘You don’t learn to walk by following rules. You learn by doing, and falling over’.</i></h4>
+				<h4 style="color: #66FCF1 "><i>‘You don’t learn to walk by following rules. You learn by doing, and falling over’.</i></h4>
 				
-				<p><br>Trailing this quote by Sir Richard Branson, imploring enough, motivates me to build and explore new products. I have pursued my under-graduation from <i>NSIT, Delhi</i> in <i>Computer Engineering</i>. Currently working as a <i>Software Engineer</i> at one of the reputed tech firms, <i>Samsung Research</i> with solid programming expertise in Core Java, C++, OO methodologies. </p>
+				<p><br>Trailing this quote by Sir Richard Branson, imploring enough, motivates me to build and explore new products. I have pursued my under-graduation from <i style="color: #66FCF1 ">NSIT, Delhi</i> in <i style="color: #66FCF1 ">Computer Engineering</i>. Currently working as a <i style="color: #66FCF1 ">Software Engineer</i> at one of the reputed tech firms, <i style="color: #66FCF1 ">Samsung Research</i> with solid programming expertise in Core Java, C++, OO methodologies. </p>
 
-				<p>Detailed-oriented, responsible, and committed engineer, with a get-it-done, on-time, and high-quality product spirit. More than <i>2 years</i> of hands-on experience in defining requirements, designing, implementing, testing, and delivering complex back-end solutions and android framework applications using a variety of programming languages and technologies.</p>
+				<p>Detailed-oriented, responsible, and committed engineer, with a get-it-done, on-time, and high-quality product spirit. More than <i style="color: #66FCF1 ">2 Years</i> of hands-on experience in defining requirements, designing, implementing, testing, and delivering complex <i style="color: #66FCF1 ">Backend Solutions</i> and <i style="color: #66FCF1 ">Android Framework Applications</i> using a variety of programming languages and technologies.</p>
 
 				<p>Apart from my regular work, I like observing and trading in the Indian Stock Market, reading books on successful people, watching TED talks, and prospecting new gadgets and latest technologies.</p>
 				
@@ -175,15 +175,16 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2018</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, Noida</h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, <i style="color:var(--red)">Noida</i></h4>
                      <p><i>Software Development Engineer</i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Currently working in Knox Enterprise Framework TG under the Biz Solutions R&D team for the past 2 years.
-                     	<br><br> My key responsibilities include designing and developing new features for the Samsung Workspace Enterprise application based upon clients' requirements while enhancing and optimizing the existing architecture of the application. 
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Improved the Secure Folder keyguard performance by up to 30% and implemented new features based upon consumer feedback for the mass market and flagship devices.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Successfully ported Knox Workspace Keyguard and legacy client C++ APIs from Android P to Android Q. Improved the stability of the existing module.
+                     	Currently working in <i style="color:var(--red)">Knox Enterprise Framework TG</i> under the Biz Solutions R&D team for the past 2 years.
+                     	<br><br> My key responsibilities include designing and developing new features for the 
+                     	<i style="color:var(--red)">Samsung Workspace Enterprise</i> application based upon clients' requirements while enhancing and optimizing the existing architecture of the application. 
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Improved the <i style="color:var(--red)">Secure Folder</i> keyguard performance by up to <i style="color:var(--red)">30%</i> and implemented new features based upon consumer feedback for the mass market and flagship devices.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Successfully ported Knox Workspace Keyguard and legacy client C++ APIs from <i style="color:var(--red)">Android P</i> to <i style="color:var(--red)">Android Q</i>. Improved the stability of the existing module.
                     </p>   
                  </div>
              </div>
@@ -192,14 +193,14 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2018</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:var(--primary-color)">Aricent Technologies, Gurgaon</h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Aricent Technologies, <i style="color:var(--red)">Gurgaon</i></h4>
                      <p><i>Software Trainee</i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Worked in Analytics and Research team during my 1 month winter internship. The key objectives were social media analysis using System Dynamics.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created a hybrid Machine Learning-System Dynamics model using R and Vensim to analyze and predict the Index score from the Global Connectivity Index dataset.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Performed Twitter Sentimental Analysis and visualization using R and NodeXL features on the latest trends of IoT domains.
+                     	Worked in <i style="color:var(--red)">Analytics and Research</i> team during my 1 month winter internship. The key objectives were social media analysis using System Dynamics.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Created a hybrid <i style="color:var(--red)">Machine Learning-System Dynamics</i> model using R and Vensim to analyze and predict the Index score from the Global Connectivity Index dataset.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Performed <i style="color:var(--red)">Twitter Sentimental Analysis</i> and visualization using R and NodeXL features on the latest trends of <i style="color:var(--red)">IoT</i> domains.
                     </p>
                  </div>
              </div>
@@ -208,14 +209,14 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2017</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, Bangalore</h4>
-                     <p><i>Software Engineering Intern</i></p>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, <i style="color:var(--red)">Bangalore</i></h4>
+                     <p><i><b>Software Engineering Intern</b></i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Worked in the Samsung Pay team on the “Wallet Hub” project during my 2 months summer internship.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Created one to one messaging app which lets users request money through special code using Samsung Pay and integrated it with the main Samsung Pay app. 
-                     	<br><br><i class="fa fa-chevron-right" style="color:var(--primary-color)" aria-hidden="true"></i> Implemented dummy card payment functionality in Samsung Pay SDK for Spay Mini supported devices.
+                     	Worked in the <i style="color:var(--red)">Samsung Pay</i> team on the <i style="color:var(--red)">Wallet Hub</i> project during my 2 months summer internship.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Created one to one <i style="color:var(--red)">Messaging</i> app which lets users request money through special code using Samsung Pay and integrated it with the main Samsung Pay app. 
+                     	<br><br><i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Implemented dummy card payment functionality in Samsung Pay SDK for <i style="color:var(--red)">SPay Mini</i> supported devices.
                     </p> 
                  </div>
              </div>
@@ -234,7 +235,7 @@ SSSssshhhhh!! The code starts below -->
 		<div class="row">
 
 			<div class="col-md-12 text-center">
-				<h2>TECHNICAL SKILLS</h2>
+				<h2 style="color: #66FCF1 ">TECHNICAL SKILLS</h2>
 				<p>A representation of my proficiency in each skill</p>
 			</div>
 
@@ -242,10 +243,10 @@ SSSssshhhhh!! The code starts below -->
 
 				<div class="skill">
 					<span class="chart" data-percent="82">
-						<span class="percent">82</span>
+						<span class="percent" >82</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>Java</h4>
+					<h4 style="color: #66FCF1 ">Java</h4>
 					<p>Primary Programming language</p>
 				</div>
 
@@ -254,7 +255,7 @@ SSSssshhhhh!! The code starts below -->
 						<span class="percent">73</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>C++</h4>
+					<h4 style="color: #66FCF1 ">C++</h4>
 					<p>Experience working with <br>C++ APIs and libraries</p>
 				</div>
 
@@ -263,7 +264,7 @@ SSSssshhhhh!! The code starts below -->
 						<span class="percent">63</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>Python</h4>
+					<h4 style="color: #66FCF1 ">Python</h4>
 					<p>Used in Machine Learning projects</p>
 				</div>	
 
@@ -272,7 +273,7 @@ SSSssshhhhh!! The code starts below -->
 						<span class="percent">76</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>Android</h4>
+					<h4 style="color: #66FCF1 ">Android</h4>
 					<p>Experience working on <br> application & framework level</p>
 				</div>	
 
@@ -281,7 +282,7 @@ SSSssshhhhh!! The code starts below -->
 						<span class="percent">71</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>Bootstrap</h4>
+					<h4 style="color: #66FCF1 ">Bootstrap</h4>
 					<p>Used in making responsive <br> one page websites</p>
 				</div>	
 
@@ -290,7 +291,7 @@ SSSssshhhhh!! The code starts below -->
 						<span class="percent">74</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>Data Structures <br> Algorithms</h4>
+					<h4 style="color: #66FCF1 ">Data Structures <br> Algorithms</h4>
 					<p>Experience using advanced <br> DS and algo concepts</p>
 				</div>	
 
@@ -299,7 +300,7 @@ SSSssshhhhh!! The code starts below -->
 						<span class="percent">62</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>SQL</h4>
+					<h4 style="color: #66FCF1 ">SQL</h4>
 					<p>Comfortable working <br> with DB queries.</p>
 				</div>	
 
@@ -308,7 +309,7 @@ SSSssshhhhh!! The code starts below -->
 						<span class="percent">59</span>
 						<canvas height="152" width="152"></canvas>
 					</span>
-					<h4>Machine Learning</h4>
+					<h4 style="color: #66FCF1 ">Machine Learning</h4>
 					<p>Hands-on working with <br>different framewroks & models</p>
 				</div>								
 
