--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@ SSSssshhhhh!! The code starts below -->
 <!DOCTYPE html>
 <html>
 <head>
-	<title>@harshilY</title>
+	<title>Harshil Y.</title>
 
 	<meta name="viewport" content="width=1024">
-
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -74,15 +77,15 @@ SSSssshhhhh!! The code starts below -->
 
   <div class="slides-container"> 
     <img src="img/slide1.jpg" alt="">
-    <img src="img/slide2.jpg" alt="">
+    <!--<img src="img/slide2.jpg" alt="">-->
     <img src="img/slide3.jpg" alt="">
     <img src="img/slide4.jpg" alt="">
   </div>
 
   <div class="titleMessage">
   	<div class="heading">
-  		<p class="main" >HARSHIL YADAV</p>
-  		<p class="sub typed" style="color: #66FCF1 "></p>
+  		<p class="main" style="color: #66FCF1 ">HARSHIL YADAV</p>
+  		<p class="sub typed" ></p>
   	</div>
   	
   </div>
