chnaged color scheme

--- a/index.html
+++ b/index.html
@@ -171,23 +171,23 @@ SSSssshhhhh!! The code starts below -->
 <!-- Experience -->
 <div id="timeline" class="section experienceSection shadow">
  <div class="container">
-     <h2 class="heading"><i class="fa fa-building-o" aria-hidden="true"></i>  PROFESSIONAL EXPERIENCE</span></h2>
+     <h2 class="heading" style="color:var(--darkteal)"><i class="fa fa-building-o" aria-hidden="true"></i>  PROFESSIONAL EXPERIENCE</span></h2>
      <p class="lead under-heading"> </p>
      <ul class="timeline">
          <li>
              <div class="timeline-badge">2018</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, <i style="color:var(--red)">Noida</i></h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, <i style="color:var(--darkteal)">Noida</i></h4>
                      <p><i>Software Development Engineer</i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Currently working in <i style="color:var(--red)">Knox Enterprise Framework TG</i> under the Biz Solutions R&D team for the past 2 years.
+                     	Currently working in <i style="color:var(--darkteal)">Knox Enterprise Framework TG</i> under the Biz Solutions R&D team for the past 2 years.
                      	<br><br> My key responsibilities include designing and developing new features for the 
-                     	<i style="color:var(--red)">Samsung Workspace Enterprise</i> application based upon clients' requirements while enhancing and optimizing the existing architecture of the application. 
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Improved the <i style="color:var(--red)">Secure Folder</i> keyguard performance by up to <i style="color:var(--red)">30%</i> and implemented new features based upon consumer feedback for the mass market and flagship devices.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Successfully ported Knox Workspace Keyguard and legacy client C++ APIs from <i style="color:var(--red)">Android P</i> to <i style="color:var(--red)">Android Q</i>. Improved the stability of the existing module.
+                     	<i style="color:var(--darkteal)">Samsung Workspace Enterprise</i> application based upon clients' requirements while enhancing and optimizing the existing architecture of the application. 
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--darkteal)" aria-hidden="true"></i> Improved the <i style="color:var(--darkteal)">Secure Folder</i> keyguard performance by up to <i style="color:var(--darkteal)">30%</i> and implemented new features based upon consumer feedback for the mass market and flagship devices.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--darkteal)" aria-hidden="true"></i> Successfully ported Knox Workspace Keyguard and legacy client C++ APIs from <i style="color:var(--darkteal)">Android P</i> to <i style="color:var(--darkteal)">Android Q</i>. Improved the stability of the existing module.
                     </p>   
                  </div>
              </div>
@@ -196,14 +196,14 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2018</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:var(--primary-color)">Aricent Technologies, <i style="color:var(--red)">Gurgaon</i></h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Aricent Technologies, <i style="color:var(--darkteal)">Gurgaon</i></h4>
                      <p><i>Software Trainee</i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Worked in <i style="color:var(--red)">Analytics and Research</i> team during my 1 month winter internship. The key objectives were social media analysis using System Dynamics.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Created a hybrid <i style="color:var(--red)">Machine Learning-System Dynamics</i> model using R and Vensim to analyze and predict the Index score from the Global Connectivity Index dataset.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Performed <i style="color:var(--red)">Twitter Sentimental Analysis</i> and visualization using R and NodeXL features on the latest trends of <i style="color:var(--red)">IoT</i> domains.
+                     	Worked in <i style="color:var(--darkteal)">Analytics and Research</i> team during my 1 month winter internship. The key objectives were social media analysis using System Dynamics.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--darkteal)" aria-hidden="true"></i> Created a hybrid <i style="color:var(--darkteal)">Machine Learning-System Dynamics</i> model using R and Vensim to analyze and predict the Index score from the Global Connectivity Index dataset.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--darkteal)" aria-hidden="true"></i> Performed <i style="color:var(--darkteal)">Twitter Sentimental Analysis</i> and visualization using R and NodeXL features on the latest trends of <i style="color:var(--darkteal)">IoT</i> domains.
                     </p>
                  </div>
              </div>
@@ -212,14 +212,14 @@ SSSssshhhhh!! The code starts below -->
              <div class="timeline-badge">2017</div>
              <div class="timeline-panel">
                  <div class="timeline-heading">
-                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, <i style="color:var(--red)">Bangalore</i></h4>
+                     <h4 class="timeline-title" style="color:var(--primary-color)">Samsung Research Institute, <i style="color:var(--darkteal)">Bangalore</i></h4>
                      <p><i><b>Software Engineering Intern</b></i></p>
                  </div>
                  <div class="timeline-body">
                      <p>
-                     	Worked in the <i style="color:var(--red)">Samsung Pay</i> team on the <i style="color:var(--red)">Wallet Hub</i> project during my 2 months summer internship.
-                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Created one to one <i style="color:var(--red)">Messaging</i> app which lets users request money through special code using Samsung Pay and integrated it with the main Samsung Pay app. 
-                     	<br><br><i class="fa fa-chevron-right" style="color:var(--red)" aria-hidden="true"></i> Implemented dummy card payment functionality in Samsung Pay SDK for <i style="color:var(--red)">SPay Mini</i> supported devices.
+                     	Worked in the <i style="color:var(--darkteal)">Samsung Pay</i> team on the <i style="color:var(--darkteal)">Wallet Hub</i> project during my 2 months summer internship.
+                     	<br><br> <i class="fa fa-chevron-right" style="color:var(--darkteal)" aria-hidden="true"></i> Created one to one <i style="color:var(--darkteal)">Messaging</i> app which lets users request money through special code using Samsung Pay and integrated it with the main Samsung Pay app. 
+                     	<br><br><i class="fa fa-chevron-right" style="color:var(--darkteal)" aria-hidden="true"></i> Implemented dummy card payment functionality in Samsung Pay SDK for <i style="color:var(--darkteal)">SPay Mini</i> supported devices.
                     </p> 
                  </div>
              </div>
